/*
 * SPDX-License-Identifier: Apache-2.0
 *
 * The OpenSearch Contributors require contributions made to
 * this file be licensed under the Apache-2.0 license or a
 * compatible open source license.
 *
 * Modifications Copyright OpenSearch Contributors. See
 * GitHub history for details.
 */

syntax = "proto3";
package org.opensearch.server.proto;

import "server/NodesInfoProto.proto";

option java_outer_classname = "NodesInfoResponseProto";

message NodesInfoRes {
  string clusterName = 1;
  repeated NodesInfo nodesInfo = 2;
}
