/*
 * SPDX-License-Identifier: Apache-2.0
 *
 * The OpenSearch Contributors require contributions made to
 * this file be licensed under the Apache-2.0 license or a
 * compatible open source license.
 *
 * Modifications Copyright OpenSearch Contributors. See
 * GitHub history for details.
 */

syntax = "proto3";
package org.opensearch.server.proto;

import "examples/ExampleRequestProto.proto";
import "server/TransportRequestProto.proto";
import "server/ClusterStateRequestProto.proto";
import "server/ClusterStateResponseProto.proto";
import "server/NodesInfoRequestProto.proto";
import "server/NodesInfoProto.proto";
import "server/NodesStatsRequestProto.proto";
import "server/NodesStatsProto.proto";

option java_outer_classname = "OutboundMessageProto";

message OutboundMsg {
  Header header = 1;
  map<string, string> requestHeaders = 2;
  map<string, ResponseHandlersList> responseHandlers = 3;
  string version = 4;
  repeated string features = 5;
  bytes status = 6;
  string action = 7;
  int64 requestId = 8;
  oneof message {
    ClusterStateReq clusterStateReq = 9;
    ClusterStateRes clusterStateRes = 10;
    NodesInfoReq nodesInfoReq = 11;
    NodesInfo nodesInfoRes = 12;
    NodesStatsReq nodesStatsReq = 13;
    NodesStats nodesStatsRes = 14;
  }
  bool isProtobuf = 15;
  
  message Header {
    repeated bytes prefix = 1;
    int64 requestId = 2;
    bytes status = 3;
    int32 versionId = 4;
  }

  message ResponseHandlersList {
    repeated string setOfResponseHandlers = 1;
  }
}
